# NMRspec

./: Makefile  Pipfile  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: main.yaml
NMR_assay_schema/: NMR-assay-schema.py
NMR_assay_schema/jsonld/: NMR-assay-schema.context.jsonld
NMR_assay_schema/jsonschema/: NMR-assay-schema.schema.json
NMR_spectroscopy_schema/: NMR-assay-schema.py  NMR-spectroscopy-schema.py  old_schema.py  provenance.py
NMR_spectroscopy_schema/jsonld/: NMR-assay-schema.context.jsonld  NMR-assay-schema.model.context.jsonld  NMR-spectroscopy-schema.context.jsonld  NMR-spectroscopy-schema.model.context.jsonld  old_schema.context.jsonld  old_schema.model.context.jsonld  provenance.context.jsonld  provenance.model.context.jsonld
NMR_spectroscopy_schema/jsonschema/: NMR-assay-schema.schema.json  NMR-spectroscopy-schema.schema.json  provenance.schema.json
NMRspec/: NMRspec.py  Provenance.py  __init__.py  dict2yaml.py  jdx.py  sovents  test_nmrspec.py  yaml2rdf.bat
NMRspec/jdx_files/: 070307_P00_01_1DP_29920121204-3960-iqyayg.jdx  SG-V3259 (41-52)_10.dx  SG-V3259 (41-52)_10.yaml  Tetrandrine_3090ug200uL_DMSOd6_13CNMR_600MHz_JDX.jdx  dataset_info.yaml  dataset_info_template.yaml  sample_info.yaml
NMRspec/jsonld/: NMRspec.context.jsonld  NMRspec.model.context.jsonld  Provenance.context.jsonld  Provenance.model.context.jsonld
NMRspec/jsonschema/: NMRspec.schema.json  Provenance.schema.json
docs/: 404.html  index.html  search.html  sitemap.xml
docs/AllowedSolvents/: index.html
docs/Assay/: index.html
docs/AssayOutput/: index.html
docs/Boolean/: index.html
docs/CategoricalValueSpecification/: index.html
docs/ChemicalDescriptor/: index.html
docs/ChemicalMetadata/: index.html
docs/Concentration/: index.html
docs/Date/: index.html
docs/DateOrDatetime/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Dimension/: index.html
docs/Double/: index.html
docs/Float/: index.html
docs/HasProvenance/: index.html
docs/HasProvenanceData/: index.html
docs/IUPACname/: index.html
docs/InCHI/: index.html
docs/InCHIKey/: index.html
docs/Instrument/: index.html
docs/Integer/: index.html
docs/MOLfile/: index.html
docs/Manufacturer/: index.html
docs/Manufacturer_id/: index.html
docs/Manufacturer_name/: index.html
docs/MolarConcentration/: index.html
docs/MolarConcentration_id/: index.html
docs/MolarConcentration_is_quality_measured_as/: index.html
docs/MolarConcentration_measured_as/: index.html
docs/MolarityMeasurementDatum/: index.html
docs/MolarityMeasurementDatum_unit/: index.html
docs/MolarityUnit/: index.html
docs/MolecularFormula/: index.html
model/: CONFIG.yaml  NMR_record_test_data.ttl  NMR_record_test_data.yaml
tests/: test_input_against_model.py
(+261 files in other folders)
