[metadata]
name = NMRspec
url = https://github.com/StroemPhi/NMRspec
author = Philip Strömert
author_email = philip.stroemert@tib.eu
summary = This model is to be used to semantify NMR spectroscopy research data.
description = This model is to be used to semantify NMR spectroscopy research data.
long_description = This model is to be used to semantify NMR spectroscopy research data.
home_page = https://StroemPhi.github.io/NMRspec
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: Attribution 4.0 International (CC BY 4.0)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    NMRspec

data-files = NMRspec/model = NMRspec/model/*
    NMRspec/jsonld_context = NMRspec/jsonld_context/*
    NMRspec/json_schema = NMRspec/json_schema/*
    NMRspec/model = NMRspec/model/*


